add：事件循环编程题

--- a/_posts/浏览器原理相关内容/2021-04-12-14-浏览器和node的事件循环.md
+++ b/_posts/浏览器原理相关内容/2021-04-12-14-浏览器和node的事件循环.md
@@ -95,6 +95,46 @@ await 后面跟的函数是同步执行的，但是 async 中 await 之后的操
 
 <img src="/../img/assets_2019/image-20210810174155786.png" alt="image-20210810174155786" style="zoom:80%;" />
 
+编程题：
+
+<img src="/../img/assets_2019/image-20210830164543216.png" alt="image-20210830164543216" style="zoom:28%;" />
+
+考点： Promise.resolve() 是一个同步方法，then 注册的方法才是微任务；
+
+异步任务会先在 Event Table 中注册函数，但是只有结果返回后才会将函数推入事件队列【时机】；
+
+执行分析：
+
+微任务队列内容：
+1⃣️第一个微任务：
+
+```js
+console.log(1);
+Promise.resolve().then(() => {
+    console.log(2);
+}).then(() => {
+    console.log(3);
+}).then(() => {
+    console.log(4);
+})
+```
+
+2⃣️执行输出1 
+Promise.resolve()后，2被推入微任务执行队列
+1输出后，5 被推入微任务执行队列
+
+3⃣️执行输出2，3被推入微任务队列
+执行输出5，6被推入微任务执行队列
+
+4⃣️执行输出3，4被推入微任务执行队列
+执行输出6
+
+5⃣️执行输出4
+
+浏览器打印结果：
+
+![image-20210830164635421](/../img/assets_2019/image-20210830164635421.png)
+
 ## 二、node事件循环
 
 ##### node 环境和 浏览器环境的区别
