add：get和POST区别 整理

--- a/_posts/HTTP相关/2021-04-24-10 状态码.md
+++ b/_posts/HTTP相关/2021-04-24-10 状态码.md
@@ -27,7 +27,7 @@ typora-root-url: ..
 
 ##### 3××：重定向，资源位置发生变动，需要客户端重新发送请求
 -  **301 Moved Permanently** 永久重定向 - 此次请求的资源已经不存在了，需要改用改用新的 `URI` 再次访问，在 `location` 字段中有新地址
--   **302 Found** 临时重定向 - 请求的资源还在，但需要暂时用另一个 `URI` 来访问，在 `location` 字段中有新地址
+-   **302 Found/Moved Temporarily** 临时重定向 - 请求的资源还在，但需要暂时用另一个 `URI` 来访问，在 `location` 字段中有新地址
 -   **304 Not Modified** 缓存重定向 - 用于 `If-Modified-Since` 等条件请求，表示 **资源未修改**，可以继续使用，用于缓存控制
 
 **【注意区分301、302】**
