add：可迭代对象 iterator + for-of

--- a/_posts/2019-07-09-es6相关 面试问题.md
+++ b/_posts/2019-07-09-es6相关 面试问题.md
@@ -219,7 +219,7 @@ const obj = Object.assign(o1, o2, o3);// { a: 1, b: 2, c: 3 }
 
 ① 如果箭头函数的函数体只有一句代码，就是简单返回某个变量或者返回一个简单的JS表达式，可以省去函数体的大括号{ }。
 
-② 如果箭头函数的函数体只有一句代码，就是返回一个对象，用小括号包裹要返回的对象，不报错
+② 如果箭头函数的函数体只有一句代码，就是 **返回一个对象，用小括号包裹要返回的对象**，不报错
 
 ```javascript
 let getTempItem = id => ({ id: id, name: "Temp" });
