--- a/_posts/JS原生基础相关/2021-09-07-扩展运算符.md
+++ b/_posts/JS原生基础相关/2021-09-07-扩展运算符.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:      操作运算符
+title:      扩展运算符 ...
 subtitle:  
-date:       2019-06-15
+date:       2021-09-07
 author:     
 header-img: 
 catalog: true
@@ -11,118 +11,19 @@ tags:
 typora-root-url: ..
 ---
 
-## 运算符[重点]和关键词
-
-优先级最高的运算符----圆括号（）
-
-
-
-#### 算数运算符: +、-、*、/、%
- 	算数运算表达式:由算数运算符连接起来的表达式；
- 	一元运算符: 这个操作符只需要一个操作数就可以运算的符号 ++ -- 分为：前+ 和后+  and   前- 和后-；
-
-```javascript
-var num = 10;
-var sum = num++ +10; //20
-//如果++在后面:如: num++ +10参与运算的时候num先参与运算,运算结束后自身再加1；
-//如果++在前面:如: ++num +10参与运算；先自身加1,然后再参与运算；
-```
-
-​    二元运算符: 这个操作符需要两个操作数就可以运算；
-​	三元运算符: 表达式1 ? 表达式2 : 表达式3;
-
-
-
-#### 复合运算符: +=、-=、*=、/=、%=
-
- 复合运算表达式:由复合运算符连接起来的表达式；
-
-
-
-
-#### 关系运算符: >、<、>= 、<=、== 、 === 、 !=  、 !==
- 关系运算表达式:由关系运算符连接起来的表达式；
- 关系运算表达式的结果是布尔类型；
-
-**不相同的数据类型进行比较时**，**首先会自动将其转换成为相同类型的数据后再进行比较**；
-
-
-
-#### 逻辑运算符:
-
--  &&---逻辑与--并且
-- ||---  逻辑或---或者
--   ! ---  逻辑非--- 取反/取非
-
-逻辑运算符的结果也是布尔类型；
-
-
-
-#### 逻辑运算表达式:
-
-由逻辑运算符连接起来的表达式
-
--  表达式1&&表达式2
-  如果有一个为false,整个的结果就是false；
-  **如果左边的为false，右边的就不会执行**；
--  表达式1||表达式2 
-  如果有一个为true,整个的结果为true；
-  **如果左边的是true，右边的就不会执行**；
--  !表达式1
-  表达式1的结果是true,整个结果为false；
-  表达式1的结果是false,整个结果为true；
-
-
-
-#### 赋值运算符:  = 
-优先级别最低，结合性**“从右向左”**
-
-
-
-#### 关键字的使用 - break，continue
-**注意**：continue和break语句还可以**跳转到指定的标签语句处**；如：break outloop；
-
-- break关键字:如果在循环中使用,遇到了break,则 **立刻跳出当前所在的循环**
-
-```javascript
-for (let i = 100; i <= 200; i++) {
-    if (i % 7 == 0) {
-        console.log(i);
-        break;
-    }
-}
-```
-- continue:在循环中如果遇到continue关键字 **直接开始下一次循环**
-
-```javascript
-//求100-200之间所有的奇数之和
-var sum = 0;
-var i = 100;
-while (i <= 200) {
-    if (i % 2 == 0) {
-        i++;
-        continue;
-    }
-    sum += i;
-    i++;
-}
-```
-
-
-
-#### 扩展运算符  -  ...
+## 扩展运算符 ...
 
 作用：
 
-在【函数调用】/【数组构造】，将【数组表达式】/【string】在语法层面展开；
+​	在【函数调用】/【数组构造】，将【数组表达式】/【string】在语法层面展开；
 
-在【构造字面量对象】时，将表达式按照key-value形式展开
+​	在【构造字面量对象】时，将表达式按照key-value形式展开
 
 ------
 
 适用对象：
 
-在数组或函数参数中使用展开语法时, 该语法只能用于 **可迭代对象**
+​	在数组或函数参数中使用展开语法时, 该语法只能用于 **可迭代对象**
 
 ```js
 let juzipi = { parents: 'junzhe', x: 51129 };
