--- a/_posts/浏览器原理相关内容/2021-04-11-10 执行上下文视角的 this.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-10 执行上下文视角的 this.md
@@ -47,7 +47,7 @@ function foo(name, age){
   this.myName = " 极客时间 " + name + age;
 }
 foo.call(bar, "name", "18");
-foo.apply(bar,["name", "17"]);
+foo.apply(bar, ["name", "17"]);
 foo.bind(bar)("name", "16");
 ```
 
@@ -89,7 +89,7 @@ var myObj = new CreateObj()
 
 用代码来表示就是：
 ```js
-var tempObj = {} // 或者 var obj = new Object();
+var tempObj = new Object();
 tempObj.__proto__ = CreateObj.prototype;//设置原型链
 CreateObj.call(tempObj); // 改变 this 指向并执行
 return tempObj;
