modify：部分描述修改

--- a/_posts/2019-07-11-js相关 面试问题.md
+++ b/_posts/2019-07-11-js相关 面试问题.md
@@ -123,6 +123,8 @@ function f1(){
 
 **缺点**：整个程序都要变成事件驱动型，运行流程会变得不清晰。
 
+
+
 ```javascript
 element.onclick=function(){
    //处理函数
@@ -132,6 +134,8 @@ element.onclick=function(){
 **优点**：写法兼容到主流浏览器
 
 **缺点**：当同一个element元素绑定多个事件时，只有最后一个事件会被添加，相当于**一次只能添加一个事件**；
+
+
 
 ```javascript
 //IE:attachEvent;三个方法执行顺序：3-2-1；
@@ -147,7 +151,9 @@ elment.addEvenListener("click",handler2,false);
 elment.addEvenListener("click",handler3,false);
 ```
 
-**注意**：该方法的第三个参数是冒泡获取，是一个布尔值：当为false时表示由里向外（冒泡），true表示由外向里（捕获）。
+**注意**：该方法的第三个参数是是否在捕获阶段调用事件处理程序，是一个布尔值：当为false时表示由里向外（冒泡），true表示由外向里（捕获）。
+
+
 
 **三、发布/订阅（又称观察者模式）**
 
