--- a/_posts/2021-07-01-事件流 + 事件模型 + js绑定事件的几种方法.md
+++ b/_posts/2021-07-01-事件流 + 事件模型 + js绑定事件的几种方法.md
@@ -90,6 +90,8 @@ div.onclick = function (event) {
     - 1、可以给同一个元素添加1个/多个事件
     - 2、默认只在冒泡阶段触发，可传参数改变
 
+*在旧版本的DOM的规定中， **addEventener** () 的第三个参数是一个布尔值表示**是否在捕获阶段调用事件处理程序***
+
 ```js
 // 第三个参数：表示是否捕获（布尔值），默认是 false，即不捕获
 window.addEventListener('load', doSomething, false);
