--- a/_posts/JS原生基础相关/2021-07-21-函数柯里化.md
+++ b/_posts/JS原生基础相关/2021-07-21-函数柯里化.md
@@ -155,8 +155,10 @@ typora-root-url: ..
 
     2、基于第一种 - 增加递归实现 `addCurry(1)(2)` 
 
-    补充知识点：**JS 函数的 length 属性**： length 是函数对象的一个属性值，指该函数 **有多少个必须要传入的参数**，那些已定义了  <u>默认值的参数不算在内</u> ，比如 `function（xx = 0`）的 length 是 0。
+    【补充知识点】
 
+    **JS 函数的 length 属性**： length 是函数对象的一个属性值，指该函数 **有多少个必须要传入的参数**，那些已定义了  <u>默认值的参数不算在内</u> ，比如 `function（xx = 0`）的 length 是 0。
+    
     ```js
     // 第二版 - 支持多参数传递
     var processCurry = function(fn, args = []) {
@@ -183,5 +185,5 @@ typora-root-url: ..
     let processMultiple1 = processCurry(multiple, 3);
     let res1 = processMultiple1(4)(5); // 60
     ```
-
+    
     
