test：尝试修改访问链接

--- a/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
+++ b/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      数组去重（算法整理）
-subtitle:  
+title:      UniqueArray
+subtitle:  数组去重（算法整理）
 date:       2019-07-16
 author:     
 header-img: 
@@ -37,7 +37,7 @@ var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 45, 6, 4]
 ```
 
-### 方法二：遍历数组，用indexOf() / includes()
+### 方法二：遍历数组用indexOf() / includes()
 
 思路1 - `indexOf`：新建一个数组 `result`，遍历原数组，当`arr[i]`不存在于新数组中，就添加 `push` 进新数组，得到的新数组就是不重复的。
 
