add：之前看重构的笔记已全部迁移，后续阅读在博客更新笔记

--- a/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
+++ b/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
@@ -17,7 +17,7 @@ typora-root-url: ..
 
 接下来按照书中页码顺序，记录一下学习重构案例的一些心得（笔记让我可以快速搜索关键词找到内容）
 
-##### 提炼函数（106）
+#### 提炼函数（106）
 
 将一段代码提取为一个函数
 
@@ -29,13 +29,13 @@ typora-root-url: ..
 
 
 
-##### 内联函数（115）
+#### 内联函数（115）
 
 - 时机：如果函数内部代码和函数名称一样清晰易读，那就不需要函数名称 --> 不是所有的间接层都有价值
 
 
 
-##### 内联变量（123）
+#### 内联变量（123）
 
 将变量替换成直接使用赋值语句的右侧表达式
 
@@ -53,7 +53,7 @@ return anOrder.basePrice > 1000;
 
 
 
-##### 改变函数声明（124）
+#### 改变函数声明（124）
 
 函数名称和参数的修改
 
@@ -80,7 +80,7 @@ zz_addReservation(customer, isPriority) {
 
 
 
-##### 封装变量（132）
+#### 封装变量（132）
 
 主要用于搬移一些被广泛使用的数据，先以函数形式封装所有对该数据的访问
 
@@ -99,7 +99,7 @@ export function setDefault(arg) {return defaultData = arg;}
 
 
 
-##### 变量改名（137）
+#### 变量改名（137）
 
 好的命名是整洁编程的核心
 
@@ -107,7 +107,7 @@ export function setDefault(arg) {return defaultData = arg;}
 
 
 
-##### 引入参数对象（140）
+#### 引入参数对象（140）
 
 对结伴使用的数据警醒，将它们组成结构
 
@@ -121,15 +121,18 @@ export function setDefault(arg) {return defaultData = arg;}
 
 
 
-##### 函数组合成类（144）
+#### 函数组合成类（144）
 
 利用 class ，在 constructor 中获取一些反复被使用的数据，通过 get() 实现变量、计算结果都通过属性访问
 
 - 和下方「函数组合成变换」的区别点：<u>如果在代码中对源数据做更新，那么使用类好得多</u> -> 使用下面的变换的话，派生数据存储在新记录，源数据一旦被修改，派生数据和源数据就不一致了
+- 案例：例如将访问全部收敛到一个类中，以属性访问
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818205215724.png" alt="image-20220818205215724" style="zoom:40%;" />
 
 
 
-##### 函数组合成变换（149）
+#### 函数组合成变换（149）
 
 用来限制需要对变量进行修改的代码量 -> <u>将所有计算派生数据的逻辑收拢到一处</u> -> 可以在固定地方找到/更新这些逻辑
 
@@ -139,7 +142,7 @@ export function setDefault(arg) {return defaultData = arg;}
 
 
 
-##### 拆分阶段（154）
+#### 拆分阶段（154）
 
 将计算逻辑拆分成几个阶段
 
@@ -149,15 +152,15 @@ export function setDefault(arg) {return defaultData = arg;}
 
 - 案例 ：设置中转数据结构
 
-<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220817211816431.png" alt="image-20220817211816431" style="zoom:100%;" />
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220817211816431.png" alt="image-20220817211816431" style="zoom:120%;" />
 
 
 
-##### 封装记录（162）
+#### 封装记录（162）
 
 数据可变时，可以使用类对象，用于隐藏结构细节；数据不可变时，直接保存在 record 中读取即可
 
-- 案例：数据可变的情况
+- 案例：数据可变的情况，使用类封装
 
 ```javascript
 class Org {
@@ -171,4 +174,292 @@ class Org {
 
 
 
-##### 以对象取代基本类型/以类取代类型码（174）
+#### 以对象取代基本类型/以类取代类型码（174）
+
+创建新类无需太大的工作量 -> 一开始这个类也许只是简单包装一下简单类型的数据
+
+- 不过只要类有了，日后添加的业务逻辑就有地可去了
+
+- 案例：创建一个新的 Priority 后，其他业务逻辑（几个比较函数）也可以放在当前类中
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818205638737.png" alt="image-20220818205638737" style="zoom:67%;" />
+
+私以为。上面重构完的代码不够精彩，最精彩的是调用非常非常优雅
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818205855039.png" alt="image-20220818205855039" style="zoom:47%;" />
+
+
+
+#### 以查询取代临时变量（178）
+
+只适用于临时变量，那些创建出来用于保存某段代码的返回值，以便后续直接访问变量 -> **那些只被计算一次之后不再被修改的变量**
+
+- 案例：
+
+```javascript
+const basePrice = this._quatity * this._itemPrice;
+if ( basePrice > 100 ) {
+  return basePrice * 0.95;
+} else {
+  return basePrice * 0.98;
+}
+
+// 改为查询获取变量
+get basePrice() { this._quatity * this._itemPrice; }
+
+if ( this.basePrice > 100 ) {
+  return this.basePrice * 0.95;
+} else {
+  return this.basePrice * 0.98;
+}
+```
+
+
+
+#### 提炼类（182）
+
+拆分不同作用的代码，分解类所负的责任
+
+- 步骤：1、创建新类 2、在构造旧类时创建新类的实例3、搬移字段
+- 案例：把电话号码相关行为提炼到一个新的独立的类中
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818210442443.png" alt="image-20220818210442443" style="zoom:57%;" />
+
+
+
+#### 内联类（186）
+
+把本不该分散的逻辑拽回一处
+
+- 技巧：在目标类中创建委托函数，让调用方调用委托函数，然后再搬移代码测试
+
+
+
+#### 替换算法（195）
+
+如果做一件事有更清晰的方式，则用它来替换复杂的东西。（例如引入一些程序库后，替换原先一些功能。）
+
+- 技巧：先只为这个函数准备测试，以便固定它的行为
+
+
+
+#### 搬移函数（198）
+
+- 动机：写代码的时候，需要频繁使用其他上下文
+- 搬移时需要关注： 1、函数的调用者都有谁  2、自身又调用了哪些函数  3、被调用的函数需要什么数据
+- 技巧：**从依赖最少的那个函数入手**；搬移一般都意味这为函数参数起个新名字，使它更符合新的上下文
+
+
+
+#### 搬移字段（207）
+
+和搬移函数一样，为了把所有需要修改的代码放进同一个模块 -> 为了后续简化数据操作的复杂度
+
+- 步骤：1、创建相应的访问函数 2、修改读取和更新记录的调用方
+
+- 案例：搬移的时候需要注意创建和调用时机，避免访问时还未创建
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818211011001.png" alt="image-20220818211011001" style="zoom:47%;" />
+
+
+
+#### 搬移语句到调用者（217）
+
+- 时机：函数边界偏移 - 以往很多地方共用的行为，如今某些调用点表现出不同行为
+- 做法：1、提炼函数 - 将希望保留的函数功能提取到一个临时函数 -> 2、内联函数，移除函数 -> 3、将临时函数重命名为原函数名字
+- 案例：
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818212946498.png" alt="image-20220818212946498" style="zoom:88%;" />
+
+
+
+#### 以函数调用取代内联代码（222）
+
+库函数的合理使用
+
+```javascript
+let appliesToMass = false;
+for (const s of states) {
+    if (s === "MA") appliesToMass = true;
+}
+// ---- 改为
+const appliesToMass = states.includes("MA");
+```
+
+
+
+#### 移动语句（223）
+
+让存在关联的代码一起出现 -> 将函数的声明语句靠近使用语句
+
+
+
+#### 拆分循环（227）
+
+一个循环只做一件事
+
+- 时机：在代码中，存在一些为了只循环一次，在一个循环里面做了很多事，每当修改时，需要理解循环里面的每件事
+
+- 步骤：1、复制一遍循环代码 --> 2、识别移除重复代码，使每个循环只做一件事 --> 3、进行重构，再进行性能优化（斟酌）
+
+
+
+#### 以管道取代循环（231）
+
+集合管道：使用一组运算来描述集合的迭代过程，入参和返回值都是一个集合
+
+- 案例 1：累积场景 -> <u>善于利用 reduce 本身自带的循环</u>
+
+```java
+function totalSalary() {
+    let totalSalary = 0;
+    for(const p of people) {
+        totalSalary += p.salary;
+    }
+    return totalSalary
+}
+// ----> 改为
+function totalSalary() {
+    return people.reduce((total, p) => total + p.salary, 0);
+}
+```
+
+- 案例 2：<u>for + if 一般可以用 filter + map 解决</u>
+
+```javascript
+const name = [];
+for(const i of input){
+    if(i.job === “programmer”) {
+        name.push(i.name);
+    }
+}
+// ----> 改为
+const name = input
+    .filter(i => i.job === "programmer”)
+    .map(it => it.name);
+```
+
+- 案例 3：使用 slice + filter + map 解决
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818213823078.png" alt="image-20220818213823078" style="zoom:67%;" />
+
+
+
+#### 拆分变量（240）
+
+每个变量只承担一个责任 -> 如果变量承担多个责任，它就应该被替换/分解为多个变量
+
+
+
+#### 字段改名（244）
+
+#### 以查询取代派生变量（248）
+
+
+
+#### 将引用对象改为值对象（252）
+
+将重构目标，都修改为不可变对象（值对象） -> 是不是真正的值对象，要看是否基于值 判断相等性（js中这个概念很弱）
+
+- 背景说明：引用对象的更新方式：<u>保留原对象，更新其内部属性</u>；值对象的更新方式：<u>替换整个对象，新换上的对象有想要的属性</u>
+
+- 场景：值对象在分布式系统、并发系统中尤为有用，因为值对象是不可变的数据结构，不必操心维护内存链接
+- 步骤：1、把对象改为值对象，对它的字段运用移除设值函数：把这两个字段的初始值加到构造函数中，并迫使构造函数调用设值函数 -> 2、逐一查看设值函数的调用者，并将其改为重新赋值整个对象 -> 3、此时修改的对象已经是不可变的类， 将其变成真正的值对象 - 提供基于值判断相等性的函数
+- <img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818214305879.png" alt="image-20220818214305879" style="zoom:37%;" />
+- 案例：在类初始化的时候使用设值函数
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818214404059.png" alt="image-20220818214404059" style="zoom:80%;" />
+
+
+
+#### 将值对象改为引用对象（256）
+
+如果共享的数据需要更新，需要改为引用对象
+
+- 步骤：1、需要为相关对象创建一个仓库 ->  2、确保构造函数有办法找到关联对象的正确实例 ->  3、修改宿主对象的构造函数，令其从仓库中获取关联对象
+- 核心：<u>有一个仓库可以管理引用对象</u>，如果出现过就返回之前创建的，如果没有出现过就创建新的
+- 案例：将数据的访问和修改都指向同一个数据
+
+```javascript
+let _data;
+export function init() {
+  _data = {};
+  _data.customers = new Map();
+}
+// 注册顾客函数
+export function register(id) {
+  // 判断顾客id是否已存在
+  if(!_data.customers.has(id)) {
+    // 不存在则创建
+    _data.customers.set(id, new Customer(id));
+  }
+  return findCustomer(id);
+}
+export function findCustomer(id) {
+  // 存在则返回之前的实例
+  return _data.customers.get(id);
+}
+```
+
+
+
+#### 分解条件表达式（260）
+
+#### 以多态取代条件表达式（272）
+
+复杂的条件逻辑（常见于 switch 函数） -> 类和多态，但是注意不要滥用，只针对复杂逻辑
+
+- switch ： 针对 switch 语句每个分支逻辑都创建一个类，用多态来承载各个类型特有的行为
+-  技巧：一般是有一个基础逻辑，在其上又有一些变体
+- 案例：基础类 Bird ，在其之上再根据 switch 添加一些变体
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818215216985.png" alt="image-20220818215216985" style="zoom:37%;" />
+
+
+
+#### 将查询函数和修改函数分离（306）
+
+保证调用者不会调用到有副作用的代码
+
+#### 函数参数化（310）
+
+#### 移除标记参数（314）
+
+用于处理某个参数被用作区分函数行为的标记
+
+#### 保持对象完整（319）
+
+用于将过长的参数列表变得简洁一点
+
+#### 以查询取代参数（324）
+
+#### 移除设值函数（331）
+
+#### 以工厂函数取代构造函数（334）
+
+#### 以命令取代函数（337）
+
+用于处理太多临时变量和参数的函数
+
+#### 函数上移（350）
+
+
+
+#### 以子类取代类型码（362）
+
+有点像 272 的以多态取代条件表达式
+
+- 案例：和 272 案例很像
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818215352219.png" alt="image-20220818215352219" style="zoom:80%;" />
+
+
+
+
+
+
+
+
+
+
+
