add：学习重构名录移动语句、拆分变量、字段改名、以查询取代派生变量、分解条件表达式

--- a/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
+++ b/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
@@ -290,7 +290,9 @@ const appliesToMass = states.includes("MA");
 
 #### 移动语句（223）
 
-让存在关联的代码一起出现 -> 将函数的声明语句靠近使用语句
+让存在关联的代码一起出现，一般是在提炼函数之前使用
+
+- 推荐将函数的声明语句靠近使用语句，让声明点和使用点相互靠近
 
 
 
@@ -347,13 +349,61 @@ const name = input
 
 #### 拆分变量（240）
 
-每个变量只承担一个责任 -> 如果变量承担多个责任，它就应该被替换/分解为多个变量
+每个变量只承担一个责任
+
+- 时机：如果变量承担多个责任，它就应该被替换/分解为多个变量
 
 
 
 #### 字段改名（244）
 
+- 步骤：1、（针对一些非常复杂的数据结构）封装记录 -> 2、改名时注意 取值函数、设值函数、构造函数、内部数据结构
+- 案例：
+
+```javascript
+const org = {name: "Alice", city: "HangZhou"};
+
+// ---> 改为：将 name 属性改为 title
+// 第一步：封装记录
+class Org {
+  constructor(data) {
+    this._name = data.name;
+    this._city = data.city;
+  }
+  
+  get name() { return this._name };
+  set name(aString) { this._name = aString };
+  get city() { return this._city };
+  set city(aCity) { this._city = aCity };
+}
+
+const org = new Org({name: "Alice", city: "HangZhou"});
+
+// 第二步：逐步改动几个相关函数
+class Org {
+  constructor(data) {
+    this._title = data.title || data.name; // 这是很好的兼容步骤，后续测试完毕就可以删除 或逻辑 了
+    this._city = data.city;
+  }
+  
+  get title() { return this._title };
+  set title(aString) { this._title = aString };
+  get city() { return this._city };
+  set city(aCity) { this._city = aCity };
+}
+
+const org = new Org({title: "Alice", city: "HangZhou"});
+```
+
+
+
+
+
 #### 以查询取代派生变量（248）
+
+可变数据是软件最大的错误源头之一，尽可能把可变数据的作用域限制在最小范围，避免源头数据改变后，派生变量没变导致的问题
+
+- 步骤：1、找到所有对变量做更新的点 -> 2、新建一个函数，专门用于计算当前变量的值 -> 3、测试、替换、删除死代码
 
 
 
@@ -403,7 +453,18 @@ export function findCustomer(id) {
 
 
 
-#### 分解条件表达式（260）
+#### 分解条件表达式（260） - 提炼函数的一个应用场景
+
+条件逻辑会使代码很难阅读，需要理解两部分：检查条件分支的代码和实现功能的代码 -> 提炼函数，让条件分支清晰，再利用函数名称明确功能
+
+- 技巧：条件判断比较复杂的时候，就抽离一个独立函数专门用于计算判断条件 -> 简单的分支逻辑可以被三元运算符替代
+- 案例：具体函数就不放了，放一下提炼后的结果，含义很明确
+
+```react
+const charge = summer() ? summerCharge() : regularCharge();
+```
+
+
 
 #### 以多态取代条件表达式（272）
 
