add：学习 函数参数化 移除标记参数

--- a/_posts/重构2/2022-08-15-需要重构的特征.md
+++ b/_posts/重构2/2022-08-15-需要重构的特征.md
@@ -56,3 +56,9 @@ typora-root-url: ..
 - - **总是一同出现、一同作为函数参数传递的数据**，最好是规整到同一条记录中，以体现它们之间的联系
   - 如果修改一条记录时，**总是需要同时改动另一条记录**，那么说明很可能有字段放错了位置
   - 如果我更新一个字段 时，**需要同时在多个结构中做出修改**，表明该字段需要被搬移到一个集中的地点，这样每次只需修改一处地方
+
+##### 8、既有返回值，又有有副作用的函数
+
+[一个比较好的原则]：任何有返回值的函数，都不应该有看得到的副作用
+
+- 操作：将查询动作分离出来
