--- a/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
+++ b/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
@@ -482,11 +482,39 @@ const charge = summer() ? summerCharge() : regularCharge();
 
 保证调用者不会调用到有副作用的代码
 
-#### 函数参数化（310）
+
+
+#### 函数参数化/令函数携带参数（310）
+
+如果两个函数逻辑非常相似，只有一些字面量的值不同，可以将 <u>其合并成一个函数，以参数形式传入不同值</u>
+
+- 案例：
+
+```react
+const amount = bottomBand(usage) * 0.03 + middleBand(usage) * 0.05 + topBand(usage) * 0.07; 
+
+function bottomBand(usage) { return Math.min(usage, 100); }
+function middleBand(usage) { return usage > 100 ? Math.min(usage, 200) - 100 : 0; }
+function topBand(usage) { return usage > 200 ? usage - 200 : 0; }
+
+// --> 从中间范围的 middleBand 入手
+function withinBand(usage, bottom, top) { return usage > bottom ? Math.min(usage, top) - bottom : 0; }
+const amount = withinBand(usage, 0, 100) * 0.03 
+						 + withinBand(usage, 100, 200) * 0.05
+						 + withinBand(usage, 200, Infinity) * 0.07;
+```
+
+
+
+
 
 #### 移除标记参数（314）
 
-用于处理某个参数被用作区分函数行为的标记
+标记参数是一些被调用者，用来指示函数应该执行哪一部分的逻辑（一些字面量，用于影响函数内部的控制流） -> 难以理解一个函数该如何调用，可以调用执行哪部分代码
+
+- 目的：用明确的一个函数来完成一项单独的任务
+
+
 
 #### 保持对象完整（319）
 
