add：把之前看案例看到的名录看完了，其他的有用再翻书，接下来看下主要的目录说明结构，准备进入收尾阶段，进行总结产出

--- a/_posts/重构2/2022-08-15-重构的关键理念.md
+++ b/_posts/重构2/2022-08-15-重构的关键理念.md
@@ -74,6 +74,10 @@ typora-root-url: ..
 
 18、重构的时候，有时把相关元素一口气搬移到位更简单，然后再提炼、拆分
 
+19、函数的参数列表应该总结当前函数的可变性，标示出可能体现函数行为差异的主要方式（越短越容易理解，不要重复）
+
+- 如果传入的参数，函数自己也可以获得，这就是重复
+
 
 
 产品总是觉得开发者在重构上面花时间是浪费他们的时间，影响需求交付的事情；殊不知，**重构就是程序员去尝试理解一段代码，并将这段代码整合成后续更方便自己或者其他人理解、易于修改的结构的过程**，难以阅读修改的代码，在增加功能、修改功能时，耗费的时间更久、改出bug的可能性更高，而我们的需求迭代比新增多得多，如果每段代码都有较好的可读性，做好了易修改、不易引入错误的特性，那重构就不需要发生了。
