--- a/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
+++ b/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
@@ -508,11 +508,19 @@ const amount = withinBand(usage, 0, 100) * 0.03
 
 
 
-#### 移除标记参数（314）
+#### 移除标记参数/以明确函数取代参数（314）
 
-标记参数是一些被调用者，用来指示函数应该执行哪一部分的逻辑（一些字面量，用于影响函数内部的控制流） -> 难以理解一个函数该如何调用，可以调用执行哪部分代码
+标记参数是指：被调用者用来指示函数应该执行哪一部分的逻辑（影响了内部的控制流） -> 会增加后续使用者的理解成本：难以理解一个函数该如何调用，可以调用执行哪部分代码  -> 标记参数隐藏了函数调用中存在的差异性
 
+- 时机：遇到不能清晰得传达含义的标记参数就可以重构，布尔型的标记尤其糟糕
 - 目的：用明确的一个函数来完成一项单独的任务
+- 案例：遇到非常复杂的内嵌逻辑，可以尝试用包装函数来明确功能
+
+```react
+// --> 改为 ：两个包装函数
+function rushDeliveryDate (anOrder) {return deliveryDate(anOrder, true);}
+function regularDeliveryDate(anOrder) {return deliveryDate(anOrder, false);}
+```
 
 
 
@@ -520,17 +528,49 @@ const amount = withinBand(usage, 0, 100) * 0.03
 
 用于将过长的参数列表变得简洁一点
 
-#### 以查询取代参数（324）
+- 时机：如果是把一个记录里面的多个值拆开传入下一个函数 -> 可以改为传递整个记录，而且传递整个记录可以更好地应对变化：如果将来要从记录中导出更多数据，则不需要再修改参数列表
+
+
+
+#### 以查询取代参数/以参数取代参数（324）
+
+去除重复参数（如果传入的参数，函数自己也能轻易计算获得，这也是一种重复）
+
+
 
 #### 移除设值函数（331）
 
+如果不希望字段在对象创建之后还可以被改变，则不要提供设置函数（set） -> 这样就只能在构建的时候赋值
+
+
+
 #### 以工厂函数取代构造函数（334）
 
-#### 以命令取代函数（337）
+工厂函数的内部实现可以调用构造函数或者换成别的方式实现，并实现使用清晰的函数名称明确功能，也不需要使用特殊关键词（new）
 
-用于处理太多临时变量和参数的函数
+- 案例：
 
-#### 函数上移（350）
+````react
+class Employee {
+  constructor (name, typeCode) { 
+    this._name = name; 
+    this._typeCode = typeCode; 
+  }
+  get name() {return this._name;} 
+  get type() { return Employee.legalTypeCodes[this._typeCode]; }
+  static get legalTypeCodes() { return {"E": "Engineer", "M": "Manager", "S": "Salesman"}; }
+}
+// 使用方
+candidate = new Employee(document.name, document.empType);
+const leadEngineer = new Employee(document.leadEngineer, 'E');
+
+// --> 改为 工厂函数
+function createEmployee(name, typeCode) { 
+  return new Employee(name, typeCode); 
+}
+candidate = createEmployee(document.name, document.empType);
+const leadEngineer = createEmployee(document.leadEngineer, 'E');
+````
 
 
 
