add：重新看第二章《重构的原则》，加强本书理念的理解

--- a/_posts/重构2/2022-08-15-需要重构的特征.md
+++ b/_posts/重构2/2022-08-15-需要重构的特征.md
@@ -31,9 +31,10 @@ typora-root-url: ..
 - 第二次做类似 的事会产生反感，但无论如何还是可以去做；
 - 第三次再做类似的事，你就应该重构
 
-##### 4、重构的最佳时机就在「添加新功能」之前
+##### 4、重构的最佳时机就在「添加新功能」之前（磨刀不误砍柴工）
 
 - 添加新功能最快的方法往往不是增加新代码，而是 <u>修改现有的代码</u>，使新功能更容易被加入
+- 捡垃圾式重构 -> 每个小步骤都不会破坏代码，在多次路过时清理，即便每次清理并不完整，代码也不会被破坏，直到最终清理干净
 
 ##### 5、如果看见一块代码比较凌乱，但是这次需求我并不需要修改它，那么就不需要去修改它 
 
@@ -59,6 +60,6 @@ typora-root-url: ..
 
 ##### 8、既有返回值，又有有副作用的函数
 
-[一个比较好的原则]：任何有返回值的函数，都不应该有看得到的副作用
+一个比较好的原则]：任何有返回值的函数，都不应该有看得到的副作用
 
 - 操作：将查询动作分离出来
