--- a/_posts/重构2/2022-08-15-重构的关键理念.md
+++ b/_posts/重构2/2022-08-15-重构的关键理念.md
@@ -13,7 +13,7 @@ typora-root-url: ..
 
 # 重构的关键理念
 
-1、如果一段代码能正常工作，并且不会再被修改，那么**完全可以不去重构它**
+1、如果一段代码能正常工作，并且不会再被修改，或者我不需要修改它来帮助我工作，那么**完全可以不去重构它**
 
 2、**代码被阅读和修改的次数，远远多于它被编写的次数**
 
@@ -34,10 +34,11 @@ typora-root-url: ..
 - 在重构过程中，**代码很少会进入不可用的状态**，即使重构没有完成，**我也可以在任何时刻停下来**
 - 每次重构过我都会提交代码，以便能够轻松回滚到上一个可工作的状态
 
-7、不要想一次性优化代码的结构，同时性能调优到最高：先编写构造良好的程序 -> 直至开发后期的性能优化阶段，然后**处理性能热点所在的一小段代码 -> 较少的工作量便有较好的成果**
+7、不要想一次性优化代码的结构，同时性能调优到最高：先编写构造良好的程序 -> 直至开发后期的性能优化阶段，然后 **处理性能热点所在的一小段代码 -> 性能调优往往可以通过较少的工作量便有较好的成果** -> 一个程序的大半时间都耗费在一小半代码身上
 
-- - 为了提高性能的修改，可能会造成程序难以维护，减缓开发速度 -> 出现一个程序的大半时间都耗费在一小半代码身上
-  - 在聪明的编译器、现代的缓存技术面前，我们很多**直觉都是不准确**的 -> 不要太害怕引入多个循环 --> 有一份结构良好的代码，先写出可调优的软件，然后调优它以求获得足够的速度
+- 重构的目的是为了让代码「更容易理解，更易于修改」，这可能使程序运行得更快，也可能更慢；性能优化的目的是为了让程序运行得更快，最终得到的代码可能难以理解和维护，要有心理准备和取舍
+- 为了提高性能的修改，可能会造成程序难以维护，减缓开发速度
+- 在聪明的编译器、现代的缓存技术面前，我们很多**直觉都是不准确**的 -> 不要太害怕引入多个循环 --> 有一份结构良好的代码，先写出可调优的软件，然后调优它以求获得足够的速度
 
 8、好代码应该能清楚地表明它在做什么，而**变量命名是代码清晰的关键**。只要改名能够提升代码的可读性，那就应该毫不犹豫地去做。
 
@@ -61,7 +62,7 @@ typora-root-url: ..
 
 13、想清楚两件事：本次调整的目标是什么，以及该目标能否达到？
 
-14、一般来说，重构早期的主要动力是**尝试理解代码如何工作**。通常你需要先通读代码，找到一些感觉，然后再通过重 构将这些感觉从脑海里搬回到代码中。
+14、一般来说，重构早期的主要动力是**尝试理解代码如何工作**。通常你需要先通读代码，找到一些感觉，然后再通过重构将这些感觉从脑海里搬回到代码中。
 
 15、好代码的检验标准就是 人们是否能轻而易举地修改它，而**不易引入其他错误**
 
@@ -70,7 +71,7 @@ typora-root-url: ..
 - 添加新功能时，我不应该修改既有代 码，只管添加新功能；
 - 重构时我就不能再添加功能，只 管调整代码的结构
 
-17、重构的唯一目的就是**让我们开发更快，用更少的工作量创造更大的价值** — 重构的意义不在于把代码库打磨得熠熠发光，而在于纯粹的经济角度考量 -> 是一种经济利益驱动
+17、重构的唯一目的就是**让我们开发更快，用更少的工作量创造更大的价值** — 重构的意义不在于把代码库打磨得熠熠发光，而在于纯粹的经济角度考量 -> 添加功能更快、修复 bug 更快 -> 是一种经济利益驱动
 
 18、重构的时候，有时把相关元素一口气搬移到位更简单，然后再提炼、拆分
 
@@ -82,6 +83,14 @@ typora-root-url: ..
 
 产品总是觉得开发者在重构上面花时间是浪费他们的时间，影响需求交付的事情；殊不知，**重构就是程序员去尝试理解一段代码，并将这段代码整合成后续更方便自己或者其他人理解、易于修改的结构的过程**，难以阅读修改的代码，在增加功能、修改功能时，耗费的时间更久、改出bug的可能性更高，而我们的需求迭代比新增多得多，如果每段代码都有较好的可读性，做好了易修改、不易引入错误的特性，那重构就不需要发生了。
 
-并且，重构并不需要专门花两三周时间去做，大可**在日常修改 bug 和添加新功能前进行梳理** - 重构让这两项活动进行得更快，自然也就不需要告知产品了。
+并且，重构并不需要专门花两三周时间去做，大可**在日常修改 bug 和添加新功能前进行梳理** - 重构让这两项活动进行得更快，让我未来的工作也更轻松，自然也就不需要告知产品了。
 
-碎碎念：有时候我觉得进大厂，出了身边会环绕更多优秀的人，促使自己成长以外，还有一个很重要的点是提升自己的工作体验，尝试轻松的、强大的开发方式，获得更愉快的工作体验。
+碎碎念：有时候我觉得进大厂，出了身边会环绕更多优秀的人，促使自己成长以外，还有一个很重要的点是提升自己的工作体验，一个健康的代码库，尝试轻松的、高效的、强大的开发方式，获得更愉快的工作体验。
+
+“设计耐久性假说”：通过投入精力改善内部设计，增加了软件的耐久性，从而可以更长时间地保持开发的快速
+
+书中对重构的两重定义：
+
+- 名词：对软件内部结构的一种调整，目的是在不改变软件可观察行为的前提下，提高其可理解性，降低其修改成本
+- 动词：使用一系列重构首发，在不改变软件可观察行为的前提下，调整其结构
+
