add：重新阅读第6 章，系统看一下这些名录的相关性和使用场景

--- a/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
+++ b/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
@@ -13,23 +13,27 @@ typora-root-url: ..
 
 # 重构的方法论
 
-重构经历那么多年，也有很明确的方法论，可以让我们以成本最小的方式，对有问题的代码，进行重构
+重构经历那么多年，也有很明确的方法论，可以让我们以成本最小的方式，对有问题的代码，进行重构（书中给出的方法，其实和设计模式一样，是一种经验的理论化，产生了具体的方法论，每一种重构方式并不是只有书中提到的方式，但是书中提到的路径一定是相对可执行度比较高，也不容易出错的）
 
 接下来按照书中页码顺序，记录一下学习重构案例的一些心得（笔记让我可以快速搜索关键词找到内容）
+
+ps.这里记录的名录主要是根据第一章：重构的一个示例，其中谈及的名录，我都会先看一遍名录说明，再回到第一章案例中用案例实现一遍，还有一些第一章没有提及的重构手法并没有记录下来
+
+### 第6章：放在最前面的 - 最有用的重构
 
 #### 提炼函数（106）
 
 将一段代码提取为一个函数
 
-- 时机：如果你需要 <u>花时间浏览一段代码才能弄清楚它到底在干什么</u>，那么就应该将其提炼到一个函数中，并根据它所做的事为其命名。
+- 时机：如果你需要 <u>花时间浏览一段代码才能弄清楚它到底在干什么</u>，那么就应该将其提炼到一个函数中，并根据它所做的事为其命名 --> 以后再读到，一眼就能明确函数用途
 
-- 流程：1、区分哪些变量会离开原来作用域，哪些在函数中会被修改/哪些只被使用 ； 2、不会被修改的作为参数传入，会被修改的作为返回值
+- 注意：1、在做提炼前，可以先移除局部变量；2、区分哪些变量会离开原来作用域，哪些在函数中会被修改/哪些只被使用 ； 3、不会被修改的作为参数传入，会被修改的作为返回值
 
-- 技巧：在做提炼前，可以先移除局部变量
+- 技巧：写一些非常小的函数（作者推荐6行）
 
 
 
-#### 内联函数（115）
+#### 内联函数（115）- 反向重构
 
 - 时机：如果函数内部代码和函数名称一样清晰易读，那就不需要函数名称 --> 不是所有的间接层都有价值
 
@@ -53,14 +57,14 @@ return anOrder.basePrice > 1000;
 
 
 
-#### 改变函数声明（124）
+#### 改变函数声明/函数改名/修改签名（124）
 
 函数名称和参数的修改
 
 - 时机：修改参数，可以 <u>减少模块之间的信息依赖</u>，从而去除不必要的耦合
 
 - 技巧：先对函数体内部加以重构
-  - 如果要修改的是一个具有多态性的类，那么每个实现版本都需要 <u>提炼出一个新的函数的方式，来添加一层间接</u>，把旧函数调用转发给新函数
+  - 如果要修改的是一个具有多态性的类，那么每个实现版本都需要提炼出一个新的函数的方式，来添加一层间接，<u>把旧函数调用转发给新函数</u>
 
 - 案例：给函数添加参数
 
@@ -80,18 +84,16 @@ zz_addReservation(customer, isPriority) {
 
 
 
-#### 封装变量（132）
+#### 封装变量/封装字段（132）
 
-主要用于搬移一些被广泛使用的数据，先以函数形式封装所有对该数据的访问
+主要用于搬移一些被广泛使用的可变数据，先以函数形式封装所有对该数据的访问 -> 把搬移数据这项比较困难的事情，转换成搬移函数这项相对简单的任务
 
-- 案例：封装变量
+- 案例：封装变量 - 管控数据变化入口
 
 ```javascript
-let defaultData = {name:”Alice”, cat:”Aqiu”};
-export function default() {return defaultData;}
-export function setDefault(arg) {return defaultData = arg;}
+let default = {name:”Alice”, cat:”Aqiu”};
 
-// ---- 封装变量，且防止数据使用方修改源数据
+// ----> 封装变量，且防止数据使用方修改源数据
 let defaultData = {name:”Alice”, cat:”Aqiu”};
 export function default() {return Object.assign({}, defaultData);}
 export function setDefault(arg) {return defaultData = arg;}
