add：第六章阅读完成，开始阅读第七章封装

--- a/_posts/重构2/2022-08-15-重构的关键理念.md
+++ b/_posts/重构2/2022-08-15-重构的关键理念.md
@@ -44,11 +44,10 @@ typora-root-url: ..
 
 - 函数怎么命名：根据这个函数的意图来对它进行命名（以它“做什么”来命名，而不是以它“怎么做”命名）
   - 转换函数倾向于使用 toString 而不是用取值函数 value -> 一个返回字符串描述的 API 更能传达“发生了数据转换”的信息
-  - 变换函数 - 如果是在原来的对象上添加更多的信息，可以使用「enrich」
-  - 如果返回的是跟原来完全不同的对象，可以使用「transform」
+  - 变换函数 - 如果是在原来的对象上添加更多的信息，可以使用「enrich」；如果返回的是跟原来完全不同的对象，可以使用「transform」
 - 技巧：**先写一句注释描述这个函数的用途，再把这句注释变成函数的名字**
 
-9、有一些做法复杂时，应该采用**迁移式重构做法**：保留原有函数，重构新函数，逐步替换旧的调用
+9、有一些做法复杂时，应该采用**迁移式重构做法**：保留原有函数，重构新函数，逐步替换旧的调用（增量式将新的重构写入代码 -> 然后再逐一替换，保证函数功能随时可用）
 
 10、**统一访问原则**：客户端代码不应该由属性是通过字段实现还是 方法 实现而受影响
 
