--- a/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
+++ b/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
@@ -134,7 +134,7 @@ export function setDefault(arg) {return defaultData = arg;}
 
 
 
-#### 函数组合成变换（149）
+#### 函数组合成变换/数据变换函数（149）
 
 用来限制需要对变量进行修改的代码量 -> <u>将所有计算派生数据的逻辑收拢到一处</u> -> 可以在固定地方找到/更新这些逻辑
 
@@ -152,17 +152,19 @@ export function setDefault(arg) {return defaultData = arg;}
 
 - 技巧： 创建一个中转数据结构  --> 大致划分好记个阶段后，可以 <u>通过明确后一个阶段用到的前一个阶段的哪些值，来确定前一个阶段的返回值</u>
 
-- 案例 ：设置中转数据结构
+- 案例 ：设置中转数据结构（编译器是一个很好的例子）
 
 <img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220817211816431.png" alt="image-20220817211816431" style="zoom:120%;" />
 
 
 
+### 第7章：封装
+
 #### 封装记录（162）
 
 数据可变时，可以使用类对象，用于隐藏结构细节；数据不可变时，直接保存在 record 中读取即可
 
-- 案例：数据可变的情况，使用类封装
+- 案例：数据可变的情况，使用类封装 -> 封装记录不仅仅意味着替换变量，还可以控制它的使用方式
 
 ```javascript
 class Org {
