add：7.2-7.6 封装相关阅读

--- a/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
+++ b/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
@@ -178,6 +178,25 @@ class Org {
 
 
 
+#### 封装集合（170）
+
+只封装记录的访问是不够的，应该把更新操作也封装起来
+
+案例：比如为上面的记录添加接口
+
+```react
+addOrg(aOrg) {
+	this._data.push(aOrg);
+}
+removeOrg(aOrg,cb1) {
+  const this._data.indexOf(aOrg);
+  if(index === -1) cb();
+	else this._data.splice(index,1);
+}
+```
+
+
+
 #### 以对象取代基本类型/以类取代类型码（174）
 
 创建新类无需太大的工作量 -> 一开始这个类也许只是简单包装一下简单类型的数据
@@ -196,7 +215,9 @@ class Org {
 
 #### 以查询取代临时变量（178）
 
-只适用于临时变量，那些创建出来用于保存某段代码的返回值，以便后续直接访问变量 -> **那些只被计算一次之后不再被修改的变量**
+只适用于临时变量，那些创建出来用于保存某段代码的返回值，提炼查询以便后续直接访问变量 -> **那些只被计算一次之后不再被修改的变量**
+
+- 不适用：用作快照的临时变量，不适合使用本手法
 
 - 案例：
 
@@ -224,7 +245,7 @@ if ( this.basePrice > 100 ) {
 
 拆分不同作用的代码，分解类所负的责任
 
-- 步骤：1、创建新类 2、在构造旧类时创建新类的实例3、搬移字段
+- 步骤：1、创建新类 -> 2、在构造旧类时创建新类的实例 -> 3、搬移字段
 - 案例：把电话号码相关行为提炼到一个新的独立的类中
 
 <img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818210442443.png" alt="image-20220818210442443" style="zoom:57%;" />
