add:第7章看完，开始看第8章 搬移特性

--- a/_posts/重构2/2022-08-15-重构的关键理念.md
+++ b/_posts/重构2/2022-08-15-重构的关键理念.md
@@ -86,6 +86,8 @@ typora-root-url: ..
 
 碎碎念：有时候我觉得进大厂，出了身边会环绕更多优秀的人，促使自己成长以外，还有一个很重要的点是提升自己的工作体验，一个健康的代码库，尝试轻松的、高效的、强大的开发方式，获得更愉快的工作体验。
 
+碎碎念：有时候我看到工程里面的高级设计写法，我也想要写出易读、易扩展，让我看到了想要抄个小笔记，让自己记住下次遇到类似的需求也要这样写。但是这样的方式只能一点点累积，做一个什么需求遇到什么代码，都是随机的，有些你当前觉得不错的写法，但其实存在隐藏 bug，一次次踩坑才慢慢能在写代码的时候有一些长进。我从来不觉得写漂亮代码只是为了漂亮好看，我更希望写出业务价值高的代码。我也想写出有预见性的，可拓展的，兼容业务发展的代码，我不想一直做那个创造 bug 的人，我想要做写出可靠代码的那个人。而这本书，仿佛给了个标准，让我知道我要把代码写成什么样子，才算是业务价值高的代码，是寿命长的代码，这对我来说十分十分重要。
+
 “设计耐久性假说”：通过投入精力改善内部设计，增加了软件的耐久性，从而可以更长时间地保持开发的快速
 
 书中对重构的两重定义：
