--- a/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
+++ b/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
@@ -254,9 +254,29 @@ if ( this.basePrice > 100 ) {
 
 #### 内联类（186）
 
-把本不该分散的逻辑拽回一处
+【反向重构】把本不该分散的逻辑拽回一处 -> 和提炼类正好相反
 
 - 技巧：在目标类中创建委托函数，让调用方调用委托函数，然后再搬移代码测试
+
+
+
+#### 隐藏委托关系（189）
+
+“封装”意味着每个模块都尽可能少得了解系统的其他部分
+
+- 步骤：创建一个委托函数，隐藏委托关系，客户端只调用委托函数，减少理解成本，去除依赖关系
+
+- 案例：
+
+````react
+const manager = aPerson.department.manager; // 揭露了 Department 的内部原理
+
+// --> 改为：隐藏 Department，减少耦合
+class Person {
+  get manager() {return this._department.manager;}
+}
+const manager = aPerson.manager;
+````
 
 
 
@@ -264,13 +284,15 @@ if ( this.basePrice > 100 ) {
 
 如果做一件事有更清晰的方式，则用它来替换复杂的东西。（例如引入一些程序库后，替换原先一些功能。）
 
-- 技巧：先只为这个函数准备测试，以便固定它的行为
+- 技巧：先只为这个函数准备测试，以便固定它的行为；先别删除，用新旧代码一起执行以便对比结果
 
 
+
+### 第8章 搬移特性
 
 #### 搬移函数（198）
 
-- 动机：写代码的时候，需要频繁使用其他上下文
+- 动机：写代码的时候，需要频繁使用其他上下文，而不怎么关心当前上下文
 - 搬移时需要关注： 1、函数的调用者都有谁  2、自身又调用了哪些函数  3、被调用的函数需要什么数据
 - 技巧：**从依赖最少的那个函数入手**；搬移一般都意味这为函数参数起个新名字，使它更符合新的上下文
 
